--- a/flaskapp/templates/test-dashboard.html
+++ b/flaskapp/templates/test-dashboard.html
@@ -75,10 +75,10 @@
                 font-size: 15px;
             }
 
-            .dataTables_filter {
-                font-style: italic;
+            .dataTables_filter label {
+                font-style: normal;
                 font-size: medium;
-                font-weight: bold;
+                
                 
             }
 
