--- a/flaskapp/templates/dataentry-visitors.html
+++ b/flaskapp/templates/dataentry-visitors.html
@@ -134,10 +134,10 @@ Visitor Data Entry
                             {% for visitor in today_visitors %}
                             <tr id="datasection{{visitor.id}}">
                                 
-                                <td>{{visitor.a_timelog.name}}</td>
+                                <td>{{visitor.a_timelog.name.title()}}</td>
                                 <td>{{visitor.a_timelog.contact}}</td>
-                                <td>{{visitor.a_timelog.place_from}}</td>
-                                <td>{{visitor.active.visited_employee.employee_name}}</td>
+                                <td>{{visitor.a_timelog.place_from.title()}}</td>
+                                <td>{{visitor.active.visited_employee.employee_name.title()}}</td>
                                 <td>{{visitor.in_time}}</td>
 
                                 <td>
