--- a/flaskapp/templates/report-mill.html
+++ b/flaskapp/templates/report-mill.html
@@ -53,7 +53,7 @@
     
                             <div class="card-body">
                                 <table data-paging="true" id='all-millvehiclereport'
-                                    class=" table table-sm table-bordered table-striped " style="width: 100%">
+                                    class=" table display compact table-bordered table-striped " style="width: 100%">
                                     <thead class="">
                                         <tr>
                                             
@@ -116,6 +116,8 @@
                                         <option  value="{{d.id}}">{{d.department_name}}</option>
                                         {% endfor %}
                                         </select>
+                                        <label class="col-form-label" for="#intime">In Time:</label>
+                                        <input class="form-control" id="intime" type="time">
                                     <input id="millupdatedeptbtn" type="submit"  class="mt-2 btn btn-primary btn-block btn-sm" value="Update">
                                     
                                 </form>
