Added Serial No to dataentry Views

--- a/flaskapp/templates/dataentry-mill.html
+++ b/flaskapp/templates/dataentry-mill.html
@@ -114,8 +114,9 @@ Mill Vehicle Data Entry
                 <div class="card table-responsive">
                                     <h5 class="card-header">Update Mill Vehicles</h5>
                                     <div class="card-body">
-                                            <table class="mb-0   table table-borderless table-sm table-hover">
+                                            <table id="millvehicleentry" class="mb-0   table table-borderless table-sm table-hover">
                                                     <thead>
+                                                        <th>#</th>
                                                         <th>Vehicle No</th>
                                                         <th>Department</th>
                                                         <th>Out Time</th>
@@ -125,7 +126,7 @@ Mill Vehicle Data Entry
                                                     <tbody>
                                                             {% for v in comp_vehicles_today %}
                                                             <tr id="datasectionmill{{v.id}}">
-                                                                
+                                                                <td></td>
                                                                 <td><strong>{{v.comp_timesheet.comp_vehicle_no}}</strong><span>
                                                                         ({{v.comp_timesheet.model_name}})</span></td>
                                                                 <td>{{v.mill_dept.department_name}}</td>
@@ -156,8 +157,15 @@ Mill Vehicle Data Entry
 
 {% endblock %}
 
-{% block scripts %}
-<script>
-
+{% block script %}
+<script type="text/javascript">
+    var addSerialNumber = function(){
+        $('#millvehicleentry tr').each(function(index){
+            $(this).find('td:nth-child(1)').html(index+0);
+        });
+    };
+    
+    addSerialNumber();
 </script>
+
 {% endblock %}
